# mini-DB-core

./: CMakeLists.txt  README.md  main.c  tests.c
tests/: createTimeTest.c  finalTest.c  tests.c
tests/expand/: expandtest.c
tests/filter/: filtertest.c
tests/fixdelete/: fixdeletetest.c
tests/freelist/: fileloadtest.c  freelisttest.c  indexcreatetest.c  loadtest.c
tests/index/: createmanyindexes.c  indexcreatetest.c  readindex.c
tests/iterator/: iteratortest.c
tests/mmap/: mmaptest.c
tests/root/: rootdoctest.c
tests/tree/: createdoc.c  deletetest.c  deletetest2.c  manualattach.c
zgdb/: zgdb.c  zgdb.h
zgdb/data/: zgdbdata.c  zgdbdata.h
zgdb/data/filter/: zgdbfilter.c  zgdbfilter.h
zgdb/data/iterator/: dociterator.c  dociterator.h  eliterator.c  eliterator.h
zgdb/data/result/: resultlist.c  resultlist.h
zgdb/data/treestack/: treestack.h
zgdb/format/: zgdbfile.c  zgdbfile.h
zgdb/index/: zgdbindex.c  zgdbindex.h
zgdb/index/list/: freelist.c  freelist.h
zgdb/schema/: zgdbschema.c  zgdbschema.h
